--- a/friends.html
+++ b/friends.html
@@ -102,7 +102,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>모바일 최적화입니다. 화면이 너무 커요 ㅠㅠ</span>
+      <span>모바일 최적화입니다. 화면이 너무 커요 ㅠㅠ 😭</span>
     </div>
 
     <script src="https://kit.fontawesome.com/bca1400d1b.js" crossorigin="anonymous"></script>
